More font test fixes
index.scss
  - okay, so that didn't work. it appears that adding an additional
    '../' to the url path did not change the starting point to include
    '/portfolio', which leads me to believe that using any version of
    '../' will push it too far up
    - so now I'm testing with just using './' in the url
    - initial attempt:
      - "../../public/fonts/ubuntu-regular-webfont.woff2"
    - second attempt:
      - "../../../public/fonts/ubuntu-regular-webfont.woff2"
    - current attempt:
      - "./public/fonts/ubuntu-regular-webfont.woff2"
  - the dev server sees no difference between the three...

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -36,8 +36,8 @@ $ubuntu-os: #DD4814;
 // primary font for the page
 @font-face {
   font-family: "Ubuntu";
-  src: url("../../../public/fonts/ubuntu-regular-webfont.woff2") format("woff2"),
-       url("../../../public/fonts/ubuntu-regular-webfont.woff") format("woff");
+  src: url("./public/fonts/ubuntu-regular-webfont.woff2") format("woff2"),
+       url("./public/fonts/ubuntu-regular-webfont.woff") format("woff");
 }
 
 @mixin transition() {
